[package]
name = "redis-stream-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version = "0.21", features = ["streams","tokio-comp"]}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }